update selected pub

--- a/index.html
+++ b/index.html
@@ -341,6 +341,14 @@
           </div>
         </div>
       -->
+        <div class="pub-list-item" style="margin-bottom: 1rem">
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <a href="">Steering Knowledge Selection Behaviours in LLMs via SAE-Based Representation Engineering</a> 
+          <img src="https://img.shields.io/badge/LLM-orange"><br>
+          <span class="author_list">YuZhao, et al., <u>Hongru WANG</u>, Xuanli He, Kam-Fai Wong, Pasquale Minervini</span> <br>
+          <span><i>NAACL 2025</i></span> (tool conflicts with each other, how to detect and control the behaviors) <br>
+          <span><strong style="color:#bf0140">Oral = 246 / 3185 ~= 7.7% </strong></span>
+        </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
@@ -350,6 +358,14 @@
           <span class="author_list"><u>Hongru Wang</u>, Boyang Xue, Baohang Zhou, et. al, Kam-fai Wong </span> <br>
           <span><i>NAACL 2025</i></span> (self-aware knowledge boundary to manage tool calls) <br>
           <span><strong style="color:#bf0140">Oral = 246 / 3185 ~= 7.7%</strong></span>
+        </div>
+
+        <div class="pub-list-item" style="margin-bottom: 1rem">
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <a href="https://arxiv.org/abs/2405.16802.pdf">AutoPSV: Automated Process-Supervised Verifier</a> 
+          <img src="https://img.shields.io/badge/LLM-orange"><br>
+          <span class="author_list">Jianqiao Lu, Zhiyang Dou, <u>Hongru WANG</u>, Zeyu Cao, Jianbo Dai, Yingjia Wan, Yinya Huang, Zhijiang Guo </span> <br>
+          <span><i>NeurIPS 2024</i></span>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -415,7 +431,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2402.13606">MlingConf: AComprehensiveStudy of Multilingual Confidence Estimation on LLMs </a> 
+          <a href="https://arxiv.org/abs/2402.13606">MlingConf: A Comprehensive Study of Multilingual Confidence Estimation on LLMs </a> 
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
           <span class="author_list">Boyang Xue*, <u>Hongru Wang*</u>, RuiWang, et al.,BinLiang, Kam-Fai Wong</span> <br>
           <span> Under Review </span>
@@ -530,7 +546,7 @@
 
                   <tr>
                       <td>
-                        <span class="cvdate">2024.08&nbsp;-&nbsp;Present </span>
+                        <span class="cvdate">2024.08&nbsp;-&nbsp;2025.05 </span>
                         <p>
                           <!-- <img src="" alt="Logo" style="border:none;height:1.5rem;margin:0;padding:0"> -->
                           <strong>ByteDance</strong>
