update acl 2025 results

--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
       <div class="col-12 col-lg-9">
 
         <ul>
+          <li>May 2025: Nine papers are accepted by <em>ACL 2025</em>: 3 Main and 6 Findings, including 2 first-author papers and 3 (co)first-author papers.</li> 
           <li>Apr 2025: We are so exited to introduce <a href="https://arxiv.org/abs/2504.14870.pdf">OTC</a> and <a href="https://arxiv.org/abs/2504.13958.pdf">ToolRL</a>. We believe OTC will be the foundation of agentic RL like the ReAct of Agent. </li>
           <li>Jan 2025: Three papers are accepted by <em>NAACL 2025</em>, including one first author work: <a href="https://arxiv.org/abs/2402.13514">Self-DC</a> that empower language agent when to rely on internal knowledge and when to call external tools. &#128525; </li>
           
@@ -341,6 +342,24 @@
           </div>
         </div>
       -->
+        <div class="pub-list-item" style="margin-bottom: 1rem">
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <a href="">Self-Reasoning Language Models: Unfold Hidden Reasoning Chains with Few Reasoning Catalyst</a> 
+          <img src="https://img.shields.io/badge/LLM-orange"><br>
+          <span class="author_list"><u>Hongru WANG</u>, Deng Cai, Wanjun Zhong, Shijue Huang, Jeff Z. Pan, Zeming Liu, Kam-Fai Wong</span> <br>
+          <span>Reasoning and Planning for Large Language Models of ICLR 2025</span> <br>
+          <span><i>ACL 2025, Findings</i></span> (data synthesise to self-improve itself for LLMs)
+        </div>
+
+        <div class="pub-list-item" style="margin-bottom: 1rem">
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <a href="">Rethinking Stateful Tool Use in Multi-Turn Dialogues: Benchmarks and Challenges</a> 
+          <img src="https://img.shields.io/badge/LLM-orange"><br>
+          <img src="https://img.shields.io/badge/DS-blue">
+          <span class="author_list"><u>Hongru WANG</u>, Wenyu Huang, Yufei Wang, Yuanhao Xi, Jianqiao Lu, Huan Zhang, Nan Hu, Zeming Liu, Jeff Z. Pan, Kam-Fai Wong</span> <br>
+          <span><i>ACL 2025, Findings</i></span>
+        </div>
+
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <a href="">Steering Knowledge Selection Behaviours in LLMs via SAE-Based Representation Engineering</a> 
