--- a/publication/index.html
+++ b/publication/index.html
@@ -138,6 +138,83 @@
             <div class="row">
                 <div class="col-lg-12">
 
+                     <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="">Can LLMs Evaluate Complex Attribution in QA? Automatic Benchmarking using Knowledge Graphs</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange"><br>
+                      <span class="author_list">Nan Hu, Jiaoyan Chen, Yike Wu, Guilin Qi, <u>Hongru WANG</u>, et al., Jeff Z. Pan</span> <br>
+                      <span><i>ACL 2025</i></span>
+                    </div>
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="">ImPart: Importance-Aware Delta-Sparsification for Improved Model Compression and Merging in LLMs</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange"><br>
+                      <span class="author_list">Yan Yang, Yixia Li, <u>Hongru WANG</u>, Xuetao Wei, James Jianqiao Yu, Yun Chen, Guanhua Chen</span> <br>
+                      <span><i>ACL 2025</i></span>
+                    </div>
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="">UAlign: Leveraging Uncertainty Estimations for Factuality Alignment on Large Language Models</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange"><br>
+                      <span class="author_list">Boyang XUE, Fei Mi, Qi Zhu, <u>Hongru WANG</u>, Rui Wang, Sheng Wang, Erxin Yu, Xuming Hu, Kam-Fai Wong</span> <br>
+                      <span><i>ACL 2025</i></span>
+                    </div>
+
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="">Self-Reasoning Language Models: Unfold Hidden Reasoning Chains with Few Reasoning Catalyst</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange"><br>
+                      <span class="author_list"><u>Hongru WANG</u>, Deng Cai, Wanjun Zhong, Shijue Huang, Jeff Z. Pan, Zeming Liu, Kam-Fai Wong</span> <br>
+                      <span>Reasoning and Planning for Large Language Models of ICLR 2025</span> <br>
+                      <span><i>ACL 2025, Findings</i></span> (data synthesise to self-improve itself for LLMs)
+                    </div>
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="">Rethinking Stateful Tool Use in Multi-Turn Dialogues: Benchmarks and Challenges</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange"><br>
+                      <img src="https://img.shields.io/badge/DS-blue">
+                      <span class="author_list"><u>Hongru WANG</u>, Wenyu Huang, Yufei Wang, Yuanhao Xi, Jianqiao Lu, Huan Zhang, Nan Hu, Zeming Liu, Jeff Z. Pan, Kam-Fai Wong</span> <br>
+                      <span><i>ACL 2025, Findings</i></span>
+                    </div>
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="">MlingConf: A Comprehensive Study of Multilingual Confidence Estimation on Large Language Models</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange"><br>
+                      <span class="author_list">Boyang XUE*, <u>Hongru WANG*</u>, Rui Wang, Sheng Wang, Zezhong WANG, Yiming Du, Bin Liang, Wenxuan Zhang, Kam-Fai Wong</span> <br>
+                      <span><i>ACL 2025, Findings</i></span>
+                    </div>
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="">TransBench: Breaking Barriers for Transferable Graphical User Interface Agents in Dynamic Digital Environments</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange"><br>
+                      <span class="author_list">Yuheng Lu*, Qian Yu*, <u>Hongru WANG*</u>, Zeming Liu, Wei Su, et al., Yunhong Wang, Haifeng Wang</span> <br>
+                      <span><i>ACL 2025, Findings</i></span>
+                    </div>
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="">ToolSpectrum: Towards Personalized Tool Utilization for Large Language Models</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange"><br>
+                      <span class="author_list">Zihao Cheng*, <u>Hongru WANG*</u>, Zeming Liu, Yuhang Guo, Yuanfang Guo, Yunhong Wang, Haifeng Wang</span> <br>
+                      <span><i>ACL 2025, Findings</i></span>
+                    </div>
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="">SMART: Self-Aware Agent for Tool Overuse Mitigation</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange"><br>
+                      <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
+                      <span class="author_list">BCheng Qian, Emre Can Acikgoz, <u>Hongru WANG</u>, Xiusi Chen, Avirup Sil, Dilek Hakkani-Tür, Gokhan Tur, Heng Ji</span> <br>
+                      <span><i>ACL 2025, Findings</i></span>
+                    </div>
+
+
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                       <a href="https://arxiv.org/abs/2402.13514.pdf">Self-DC: When to Reason and When to Act? Self Divide-and-Conquer for ..</a> 
