update acl 2025 results

--- a/publication/index.html
+++ b/publication/index.html
@@ -175,9 +175,9 @@
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                       <a href="">Rethinking Stateful Tool Use in Multi-Turn Dialogues: Benchmarks and Challenges</a> 
-                      <img src="https://img.shields.io/badge/LLM-orange"><br>
-                      <img src="https://img.shields.io/badge/DS-blue">
-                      <span class="author_list"><u>Hongru WANG</u>, Wenyu Huang, Yufei Wang, Yuanhao Xi, Jianqiao Lu, Huan Zhang, Nan Hu, Zeming Liu, Jeff Z. Pan, Kam-Fai Wong</span> <br>
+                      <img src="https://img.shields.io/badge/LLM-orange">
+                      <img src="https://img.shields.io/badge/DS-blue"> <br>
+                      <span class="author_list"><u>Hongru WANG</u>, Wenyu Huang, et al., Zeming Liu, Jeff Z. Pan, Kam-Fai Wong</span> <br>
                       <span><i>ACL 2025, Findings</i></span>
                     </div>
 
@@ -185,7 +185,7 @@
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                       <a href="">MlingConf: A Comprehensive Study of Multilingual Confidence Estimation on Large Language Models</a> 
                       <img src="https://img.shields.io/badge/LLM-orange"><br>
-                      <span class="author_list">Boyang XUE*, <u>Hongru WANG*</u>, Rui Wang, Sheng Wang, Zezhong WANG, Yiming Du, Bin Liang, Wenxuan Zhang, Kam-Fai Wong</span> <br>
+                      <span class="author_list">Boyang XUE*, <u>Hongru WANG*</u>, Rui Wang, et al., Wenxuan Zhang, Kam-Fai Wong</span> <br>
                       <span><i>ACL 2025, Findings</i></span>
                     </div>
 
@@ -208,7 +208,7 @@
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                       <a href="">SMART: Self-Aware Agent for Tool Overuse Mitigation</a> 
-                      <img src="https://img.shields.io/badge/LLM-orange"><br>
+                      <img src="https://img.shields.io/badge/LLM-orange">
                       <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
                       <span class="author_list">BCheng Qian, Emre Can Acikgoz, <u>Hongru WANG</u>, Xiusi Chen, Avirup Sil, Dilek Hakkani-Tür, Gokhan Tur, Heng Ji</span> <br>
                       <span><i>ACL 2025, Findings</i></span>
