--- a/index.html
+++ b/index.html
@@ -324,6 +324,49 @@
   </div>
 </section>
 
+<section id="Preprint" class="home-section wg-pages">
+  <div class="container">
+    <div class="row"> 
+      <div class="col-12 col-lg-3 section-heading">
+        <h1>Preprint</h1>
+        <p>Draft and Under Review</p>
+      </div>
+
+      
+      <div class="col-12 col-lg-9">
+
+        <div class="pub-list-item" style="margin-bottom: 1rem">
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <a href="https://arxiv.org/pdf/2505.02387">RM-R1: Reward Modeling as Reasoning</a> 
+          <img src="https://img.shields.io/badge/LLM-orange"> <br>
+          <span class="author_list">Xiusi Chen, Gaotang Li, et al., Hongru Wang, et al.,, Tong Zhang, Hanghang Tong, Heng Ji</span> <br>
+          <span> Arxiv </span>
+        </div>
+
+
+         <div class="pub-list-item" style="margin-bottom: 1rem">
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <a href="">UniMS-RAG: A Unified Multi-source RAG for Personalized Dialogue Systems</a> 
+          <img src="https://img.shields.io/badge/LLM-orange">
+          <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
+          <span class="author_list"><u>Hongru Wang</u>, Wenyu Huang, Yang Deng, et. al, Jeff Z Pan, Kam-Fai Wong </span> <br>
+          <span> Under Review </span>
+        </div>        
+
+        <div class="pub-list-item" style="margin-bottom: 1rem">
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <a href="https://arxiv.org/abs/2311.16789">A Survey of the Evolution of Language Model-Based Dialogue Systems </a> 
+          <img src="https://img.shields.io/badge/LLM-orange"> <br>
+          <span class="author_list"><u>Hongru Wang</u>, Lingzhi Wang, Yiming Du, Liang Chen, Jingyan Zhou, Yufei Wang, Kam-Fai Wong </span> <br>
+          <span> Under Review </span>
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+</section>
+
 <section id="Publications" class="home-section wg-pages">
   <div class="container">     
     <div class="row">
@@ -354,9 +397,9 @@
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <a href="">Rethinking Stateful Tool Use in Multi-Turn Dialogues: Benchmarks and Challenges</a> 
-          <img src="https://img.shields.io/badge/LLM-orange"><br>
-          <img src="https://img.shields.io/badge/DS-blue">
-          <span class="author_list"><u>Hongru WANG</u>, Wenyu Huang, Yufei Wang, Yuanhao Xi, Jianqiao Lu, Huan Zhang, Nan Hu, Zeming Liu, Jeff Z. Pan, Kam-Fai Wong</span> <br>
+          <img src="https://img.shields.io/badge/LLM-orange">
+          <img src="https://img.shields.io/badge/DS-blue"> <br>
+          <span class="author_list"><u>Hongru WANG</u>, Wenyu Huang, et al., Zeming Liu, Jeff Z. Pan, Kam-Fai Wong</span> <br>
           <span><i>ACL 2025, Findings</i></span>
         </div>
 
@@ -434,49 +477,6 @@
 
       </div>
     </div>
-  </div>
-</section>
-
-<section id="Preprint" class="home-section wg-pages">
-  <div class="container">
-    <div class="row"> 
-      <div class="col-12 col-lg-3 section-heading">
-        <h1>Preprint</h1>
-        <p>Draft and Under Review</p>
-      </div>
-
-      
-      <div class="col-12 col-lg-9">
-
-        <div class="pub-list-item" style="margin-bottom: 1rem">
-          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2402.13606">MlingConf: A Comprehensive Study of Multilingual Confidence Estimation on LLMs </a> 
-          <img src="https://img.shields.io/badge/LLM-orange"> <br>
-          <span class="author_list">Boyang Xue*, <u>Hongru Wang*</u>, RuiWang, et al.,BinLiang, Kam-Fai Wong</span> <br>
-          <span> Under Review </span>
-        </div>
-
-
-         <div class="pub-list-item" style="margin-bottom: 1rem">
-          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="">UniMS-RAG: A Unified Multi-source RAG for Personalized Dialogue Systems</a> 
-          <img src="https://img.shields.io/badge/LLM-orange">
-          <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
-          <span class="author_list"><u>Hongru Wang</u>, Wenyu Huang, Yang Deng, et. al, Jeff Z Pan, Kam-Fai Wong </span> <br>
-          <span> Under Review </span>
-        </div>        
-
-        <div class="pub-list-item" style="margin-bottom: 1rem">
-          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2311.16789">A Survey of the Evolution of Language Model-Based Dialogue Systems </a> 
-          <img src="https://img.shields.io/badge/LLM-orange"> <br>
-          <span class="author_list"><u>Hongru Wang</u>, Lingzhi Wang, Yiming Du, Liang Chen, Jingyan Zhou, Yufei Wang, Kam-Fai Wong </span> <br>
-          <span> Under Review </span>
-        </div>
-
-      </div>
-    </div>
-
   </div>
 </section>
 
