--- a/index.html
+++ b/index.html
@@ -337,12 +337,27 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <a href="https://arxiv.org/pdf/2504.14870">OTC: Optimal Tool Calls via Reinforcement Learning</a> 
+          <img src="https://img.shields.io/badge/LLM-orange"> <br>
+          <span class="author_list"><u>Hongru Wang</u>, Cheng Qian, Wanjun Zhong, Xiusi Chen, et al., Mengdi Wang, Kam-Fai Wong, Heng Ji</span> <br>
+          <span> Arxiv (First work to optimize tool-use behaviors of Agent) </span>
+        </div>
+
+        <div class="pub-list-item" style="margin-bottom: 1rem">
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <a href="https://arxiv.org/pdf/2505.02387">ToolRL: Reward is All Tool Learning Needs</a> 
+          <img src="https://img.shields.io/badge/LLM-orange"> <br>
+          <span class="author_list">Cheng Qian, et al., <u>Hongru Wang</u>, Xiusi Chen, Dilek Hakkani-Tür, Gokhan Tur, Heng Ji</span> <br>
+          <span> Arxiv (First comprehensive analysis of reward design for tool learning) </span>
+        </div>
+
+        <div class="pub-list-item" style="margin-bottom: 1rem">
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <a href="https://arxiv.org/pdf/2505.02387">RM-R1: Reward Modeling as Reasoning</a> 
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
           <span class="author_list">Xiusi Chen, Gaotang Li, et al., Hongru Wang, et al.,, Tong Zhang, Hanghang Tong, Heng Ji</span> <br>
-          <span> Arxiv </span>
+          <span> Arxiv (First work to cast reward modeling as reasoning)</span>
         </div>
-
 
          <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
