--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <a href="https://arxiv.org/pdf/2505.02387">RM-R1: Reward Modeling as Reasoning</a> 
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
-          <span class="author_list">Xiusi Chen, Gaotang Li, et al., Hongru Wang, et al.,, Tong Zhang, Hanghang Tong, Heng Ji</span> <br>
+          <span class="author_list">Xiusi Chen, Gaotang Li, et al., <u>Hongru Wang</u>, et al.,, Tong Zhang, Hanghang Tong, Heng Ji</span> <br>
           <span> Arxiv (First work to cast reward modeling as reasoning)</span>
         </div>
 
@@ -471,7 +471,7 @@
           <img src="https://img.shields.io/badge/DS-blue">
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
           <span class="author_list"><u>Hongru Wang</u>, Minda Hu, Yang Deng, et. al, Irwin King, Kam-Fai Wong </span> <br>
-          <span><em>Findings, EMNLP 2023</em> <br>
+          <span><em>EMNLP 2023, Findings</em> <br>
           <img src="images/trophy.png" width="15" height="15"> <strong style="color:#bf0140">Best Paper Award</strong> @ <a href="https://phdforum.se.cuhk.edu.hk/2023/index.html">International Doctoral Forum (2023)</a></span>
           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/ruleGreen/SAFARI" target="_blank" rel="noopener"> Code </a>
           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/safari/safari_poster.pdf" target="_blank" rel="noopener"> Poster </a>
@@ -484,7 +484,7 @@
           <img src="https://img.shields.io/badge/DS-blue">
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
           <span class="author_list"><u>Hongru Wang*</u>, Rui Wang*, Fei Mi, Yang Deng, Zezhong Wang, Bin Liang, Ruifeng Xu, Kam-Fai Wong </span> <br>
-          <span><i>Findings, EMNLP 2023</i></span>
+          <span><i>EMNLP 2023, Findings</i></span>
           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/ruleGreen/Cue-CoT" target="_blank" rel="noopener"> Code </a>
           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/cuecot/cuecot_poster.pdf" target="_blank" rel="noopener"> Poster </a>
           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/cuecot/cuecot_emnlp2023.pdf" target="_blank" rel="noopener"> PPT </a>
