--- a/publication/index.html
+++ b/publication/index.html
@@ -301,7 +301,7 @@
                       <a href="">Enhancing Biomedical Knowledge RAG with Self-Rewarding Tree Search and PPO</a> 
                       <img src="https://img.shields.io/badge/LLM-orange"> <br>
                       <span class="author_list">Minda Hu, Licheng Zong, <u>Hongru WANG</u>, Jingyan Zhou, Jingjing Li, Yichen Gao, Kam-Fai Wong, Yu Li, Irwin King</span> <br>
-                      <span><i>Findings, EMNLP 2024</i></span>
+                      <span><i>EMNLP 2024, Findings</i></span>
                     </div>
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -309,7 +309,7 @@
                       <a href="">Less is More: Making Smaller Language Models Competent Subgraph Retrievers for Multi-hop KGQA</a> 
                       <img src="https://img.shields.io/badge/LLM-orange"> <br>
                       <span class="author_list">Wenyu Huang, Guancheng Zhou, <u>Hongru WANG</u>, Pavlos Vougiouklis, Mirella Lapata, Jeff Z. Pan</span> <br>
-                      <span><i>Findings, EMNLP 2024</i></span>
+                      <span><i>EMNLP 2024, Findings</i></span>
                     </div>
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -326,7 +326,7 @@
                       <a href="">Medical Dialogue: A Survey of Categories, Methods, Evaluation and Challenges</a> 
                       <img src="https://img.shields.io/badge/LLM-orange"><br>
                       <span class="author_list">Xiaoming Shi, Zeming Liu, Li Du, Yuxuan Wang, <u>Hongru WANG</u>, Yuhang Guo, Tong Ruan, JIE XU, Shaoting Zhang</span><br>
-                      <span><i>Findings, ACL 2024</i></span>
+                      <span><i>ACL 2024, Findings</i></span>
                     </div>
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -335,7 +335,7 @@
                       <img src="https://img.shields.io/badge/LLM-orange">
                       <img src="https://img.shields.io/badge/Safety-red"> <br>
                       <span class="author_list">Baohang Zhou, Zezhong WANG, Lingzhi Wang, <u>Hongru WANG</u>, Ying Zhang, Kehui Song, Xuhui Sui, Kam-Fai Wong </span><br>
-                      <span><i>Findings, ACL 2024</i></span>
+                      <span><i>ACL 2024, Findings</i></span>
                     </div>
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -349,20 +349,20 @@
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                      <a href="https://arxiv.org/abs/2403.02756.pdf">Role Prompting Guided Domain Adaptation with General Capability Preserve for LLM</a> 
-                      <img src="https://img.shields.io/badge/LLM-orange">
-                      <img src="https://img.shields.io/badge/RolePlaying-gray"> <br>
-                      <span class="author_list">Rui Wang, Fei Mi, Yi Chen, Boyang XUE, <u>Hongru WANG</u>, Qi Zhu, Kam-Fai Wong, Ruifeng Xu </span><br>
-                      <span><i>Findings, NAACL 2024</i></span>
-                    </div>
-
-                    <div class="pub-list-item" style="margin-bottom: 1rem">
-                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                       <a href="https://arxiv.org/abs/2310.15851.pdf">SELF-GUARD: Empower the LLM to Safeguard Itself</a> 
                       <img src="https://img.shields.io/badge/LLM-orange">
                       <img src="https://img.shields.io/badge/Safety-red"> <br>
                       <span class="author_list">Zezhong Wang, Fangkai Yang, Lu Wang, Pu Zhao, <u>Hongru WANG</u>, Liang Chen, Qingwei Lin, Kam-Fai Wong</span><br>
                       <span><i>NAACL 2024</i></span>
+                    </div>
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="https://arxiv.org/abs/2403.02756.pdf">Role Prompting Guided Domain Adaptation with General Capability Preserve for LLM</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange">
+                      <img src="https://img.shields.io/badge/RolePlaying-gray"> <br>
+                      <span class="author_list">Rui Wang, Fei Mi, Yi Chen, Boyang XUE, <u>Hongru WANG</u>, Qi Zhu, Kam-Fai Wong, Ruifeng Xu </span><br>
+                      <span><i>NAACL 2024, Findings</i></span>
                     </div>
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -429,7 +429,7 @@
                           <img src="https://img.shields.io/badge/DS-blue">
                           <img src="https://img.shields.io/badge/LLM-orange"> <br>
                           <span class="author_list"><u>Hongru WANG</u>, Minda Hu, Yang Deng, et. al, Irwin King, Kam-Fai Wong</span> <br>
-                          <span><i>Findings, EMNLP 2023</i></span>
+                          <span><i>EMNLP 2023, Findings</i></span>
                           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/ruleGreen/SAFARI" target="_blank" rel="noopener"> Code </a>
                           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/safari/safari_poster.pdf" target="_blank" rel="noopener"> Poster </a>
                           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/safari/safari_emnlp2023.pdf" target="_blank" rel="noopener"> PPT </a>
@@ -442,7 +442,7 @@
                           <img src="https://img.shields.io/badge/DS-blue">
                           <img src="https://img.shields.io/badge/LLM-orange"> <br>
                           <span class="author_list"><u>Hongru Wang*</u>, Rui Wang*, Fei Mi, Yang Deng, Zezhong Wang, Bin Liang, Ruifeng Xu, Kam-Fai Wong </span> <br>
-                          <span><i>Findings, EMNLP 2023</i></span>
+                          <span><i>EMNLP 2023, Findings</i></span>
                           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/ruleGreen/Cue-CoT" target="_blank" rel="noopener"> Code </a>
                           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/cuecot/cuecot_poster.pdf" target="_blank" rel="noopener"> Poster </a>
                           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/cuecot/cuecot_emnlp2023.pdf" target="_blank" rel="noopener"> PPT </a>
@@ -454,7 +454,7 @@
                           <img src="https://img.shields.io/badge/Knowledge_Probing-magenta">
                           <img src="https://img.shields.io/badge/LLM-orange"><br>
                           <span class="author_list"> Zezhong Wang*, Luyao YE*, <u>Hongru WANG</u>, Wai-Chung Kwan, David Ho, Kam-Fai Wong </span> <br>
-                          <span><i>Findings, EMNLP 2023</i></span>
+                          <span><i>EMNLP 2023, Findings</i></span>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -462,7 +462,7 @@
                           <a href="https://arxiv.org/abs/2310.08372.pdf"> Improving Factual Consistency for Knowledge-Grounded Dialogue Systems via .. Alignment </a>
                           <img src="https://img.shields.io/badge/DS-blue"> <br>
                           <span class="author_list"> Boyang XUE*, Weichao Wang*, <u>Hongru WANG</u>, et. al, Xin Jiang, Qun Liu, Kam-Fai Wong </span> <br>
-                          <span><i>Findings, EMNLP 2023</i></span>
+                          <span><i>EMNLP 2023, Findings</i></span>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -470,7 +470,7 @@
                           <a href="https://arxiv.org/abs/2305.13626.pdf"> Prompting and Evaluating Large Language Models for Proactive Dialogues .. </a>
                           <img src="https://img.shields.io/badge/LLM-orange"> <br>
                           <span class="author_list"> Yang Deng, Lizi Liao, Liang Chen, <u>Hongru WANG</u>, Wenqiang Lei, Tat-Seng Chua </span> <br>
-                          <span><i>Findings, EMNLP 2023</i></span>
+                          <span><i>EMNLP 2023, Findings</i></span>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -483,18 +483,18 @@
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                          <a href="https://aclanthology.org/2023.findings-acl.462/">Towards Robust Personalized Dialogue Generation via Order-Insensitive Representation Regularization</a>
-                          <img src="https://img.shields.io/badge/PersonalizedDS-blue"> <br>
-                          <span class="author_list">Liang Chen, <u>Hongru WANG</u>, Yang Deng, Wai Chung Kwan, Zezhong Wang, Kam-Fai Wong </span> <br>
-                          <span><i>Findings, ACL 2023</i></span>
-                        </div>
-
-                        <div class="pub-list-item" style="margin-bottom: 1rem">
-                          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                            <a href="https://aclanthology.org/2023.acl-long.364/">Retrieval-free Knowledge Injection through Multi-Document Traversal for Dialogue Models</a>
                           <img src="https://img.shields.io/badge/KnowledgeDS-yellow"> <br>
                           <span class="author_list">Rui Wang, Jianzhu Bao, Fei Mi, Yi Chen, <u>Hongru WANG</u>, et. al, Kam-Fai Wong, Ruifeng Xu </span> <br>
                           <span><i>ACL 2023</i></span>
+                        </div>
+
+                        <div class="pub-list-item" style="margin-bottom: 1rem">
+                          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                          <a href="https://aclanthology.org/2023.findings-acl.462/">Towards Robust Personalized Dialogue Generation via Order-Insensitive Representation Regularization</a>
+                          <img src="https://img.shields.io/badge/PersonalizedDS-blue"> <br>
+                          <span class="author_list">Liang Chen, <u>Hongru WANG</u>, Yang Deng, Wai Chung Kwan, Zezhong Wang, Kam-Fai Wong </span> <br>
+                          <span><i>ACL 2023, Findings</i></span>
                         </div>
                     <!-- </div> -->
                 
@@ -518,7 +518,7 @@
                           <a href="https://arxiv.org/abs/2210.05196">DIGAT: Modeling News Recommendation with Dual-Graph Interaction</a>
                           <img src="https://img.shields.io/badge/Other-red"> <br>
                           <span class="author_list">Zhiming Mao, Jian Li, <u>Hongru WANG</u>, Xingshan Zeng, Kam-Fai Wong</span> <br>
-                          <span><i>Findings, EMNLP 2022</i></span>
+                          <span><i>EMNLP 2022, Findings</i></span>
                         </div>
 
                         <!-- <div class="pub-list-item" style="margin-bottom: 1rem">
