--- a/publication/index.html
+++ b/publication/index.html
@@ -166,7 +166,8 @@
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                       <a href="">Self-Reasoning Language Models: Unfold Hidden Reasoning Chains with Few Reasoning Catalyst</a> 
-                      <img src="https://img.shields.io/badge/LLM-orange"><br>
+                      <img src="https://img.shields.io/badge/LLM-orange">
+                      <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
                       <span class="author_list"><u>Hongru WANG</u>, Deng Cai, Wanjun Zhong, Shijue Huang, Jeff Z. Pan, Zeming Liu, Kam-Fai Wong</span> <br>
                       <span>Reasoning and Planning for Large Language Models of ICLR 2025</span> <br>
                       <span><i>ACL 2025, Findings</i></span> (data synthesise to self-improve itself for LLMs)
@@ -176,6 +177,7 @@
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                       <a href="">Rethinking Stateful Tool Use in Multi-Turn Dialogues: Benchmarks and Challenges</a> 
                       <img src="https://img.shields.io/badge/LLM-orange">
+                      <img src="https://img.shields.io/badge/Tool_Learning-violet">
                       <img src="https://img.shields.io/badge/DS-blue"> <br>
                       <span class="author_list"><u>Hongru WANG</u>, Wenyu Huang, et al., Zeming Liu, Jeff Z. Pan, Kam-Fai Wong</span> <br>
                       <span><i>ACL 2025, Findings</i></span>
@@ -200,7 +202,8 @@
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                       <a href="">ToolSpectrum: Towards Personalized Tool Utilization for Large Language Models</a> 
-                      <img src="https://img.shields.io/badge/LLM-orange"><br>
+                      <img src="https://img.shields.io/badge/LLM-orange">
+                      <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
                       <span class="author_list">Zihao Cheng*, <u>Hongru WANG*</u>, Zeming Liu, Yuhang Guo, Yuanfang Guo, Yunhong Wang, Haifeng Wang</span> <br>
                       <span><i>ACL 2025, Findings</i></span>
                     </div>
@@ -210,7 +213,7 @@
                       <a href="">SMART: Self-Aware Agent for Tool Overuse Mitigation</a> 
                       <img src="https://img.shields.io/badge/LLM-orange">
                       <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
-                      <span class="author_list">BCheng Qian, Emre Can Acikgoz, <u>Hongru WANG</u>, Xiusi Chen, Avirup Sil, Dilek Hakkani-Tür, Gokhan Tur, Heng Ji</span> <br>
+                      <span class="author_list">Cheng Qian, Emre Can Acikgoz, <u>Hongru WANG</u>, Xiusi Chen, Avirup Sil, Dilek Hakkani-Tür, Gokhan Tur, Heng Ji</span> <br>
                       <span><i>ACL 2025, Findings</i></span>
                     </div>
 
