--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/pdf/2505.02387">ToolRL: Reward is All Tool Learning Needs</a> 
+          <a href="https://arxiv.org/pdf/2504.13958">ToolRL: Reward is All Tool Learning Needs</a> 
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
           <span class="author_list">Cheng Qian, et al., <u>Hongru Wang</u>, Xiusi Chen, Dilek Hakkani-Tür, Gokhan Tur, Heng Ji</span> <br>
           <span> Arxiv (First comprehensive analysis of reward design for tool learning) </span>
@@ -355,7 +355,7 @@
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <a href="https://arxiv.org/pdf/2505.02387">RM-R1: Reward Modeling as Reasoning</a> 
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
-          <span class="author_list">Xiusi Chen, Gaotang Li, et al., <u>Hongru Wang</u>, et al.,, Tong Zhang, Hanghang Tong, Heng Ji</span> <br>
+          <span class="author_list">Xiusi Chen, Gaotang Li, et al., <u>Hongru Wang</u>, et al., Tong Zhang, Hanghang Tong, Heng Ji</span> <br>
           <span> Arxiv (First work to cast reward modeling as reasoning)</span>
         </div>
 
@@ -422,7 +422,7 @@
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <a href="">Steering Knowledge Selection Behaviours in LLMs via SAE-Based Representation Engineering</a> 
           <img src="https://img.shields.io/badge/LLM-orange"><br>
-          <span class="author_list">YuZhao, et al., <u>Hongru WANG</u>, Xuanli He, Kam-Fai Wong, Pasquale Minervini</span> <br>
+          <span class="author_list">Yu Zhao, et al., <u>Hongru WANG</u>, Xuanli He, Kam-Fai Wong, Pasquale Minervini</span> <br>
           <span><i>NAACL 2025</i></span> (tool conflicts with each other, how to detect and control the behaviors) <br>
           <span><strong style="color:#bf0140">Oral = 246 / 3185 ~= 7.7% </strong></span>
         </div>
