--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
       -->
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="">Self-Reasoning Language Models: Unfold Hidden Reasoning Chains with Few Reasoning Catalyst</a> 
+          <a href="https://arxiv.org/pdf/2505.14116">Self-Reasoning Language Models: Unfold Hidden Reasoning Chains with Few Reasoning Catalyst</a> 
           <img src="https://img.shields.io/badge/LLM-orange"><br>
           <span class="author_list"><u>Hongru WANG</u>, Deng Cai, Wanjun Zhong, Shijue Huang, Jeff Z. Pan, Zeming Liu, Kam-Fai Wong</span> <br>
           <span>Reasoning and Planning for Large Language Models of ICLR 2025</span> <br>
@@ -411,7 +411,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="">Rethinking Stateful Tool Use in Multi-Turn Dialogues: Benchmarks and Challenges</a> 
+          <a href="https://arxiv.org/pdf/2505.13328">Rethinking Stateful Tool Use in Multi-Turn Dialogues: Benchmarks and Challenges</a> 
           <img src="https://img.shields.io/badge/LLM-orange">
           <img src="https://img.shields.io/badge/DS-blue"> <br>
           <span class="author_list"><u>Hongru WANG</u>, Wenyu Huang, et al., Zeming Liu, Jeff Z. Pan, Kam-Fai Wong</span> <br>
@@ -420,7 +420,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="">Steering Knowledge Selection Behaviours in LLMs via SAE-Based Representation Engineering</a> 
+          <a href="https://aclanthology.org/2025.naacl-long.264/">Steering Knowledge Selection Behaviours in LLMs via SAE-Based Representation Engineering</a> 
           <img src="https://img.shields.io/badge/LLM-orange"><br>
           <span class="author_list">Yu Zhao, et al., <u>Hongru WANG</u>, Xuanli He, Kam-Fai Wong, Pasquale Minervini</span> <br>
           <span><i>NAACL 2025</i></span> (tool conflicts with each other, how to detect and control the behaviors) <br>
@@ -429,7 +429,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2402.13514.pdf">Self-DC: When to Reason and When to Act? Self Divide-and-Conquer for ..</a> 
+          <a href="https://aclanthology.org/2025.naacl-long.331/">Self-DC: When to Reason and When to Act? Self Divide-and-Conquer for ..</a> 
           <img src="https://img.shields.io/badge/LLM-orange">
           <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
           <span class="author_list"><u>Hongru Wang</u>, Boyang Xue, Baohang Zhou, et. al, Kam-fai Wong </span> <br>
