--- a/publication/index.html
+++ b/publication/index.html
@@ -158,8 +158,8 @@
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                       <a href="">UAlign: Leveraging Uncertainty Estimations for Factuality Alignment on Large Language Models</a> 
                       <img src="https://img.shields.io/badge/LLM-orange"><br>
-                      <span class="author_list">Boyang XUE, Fei Mi, Qi Zhu, <u>Hongru WANG</u>, Rui Wang, Sheng Wang, Erxin Yu, Xuming Hu, Kam-Fai Wong</span> <br>
-                      <span><i>ACL 2025</i></span>
+                      <span class="author_list">Boyang XUE, Fei Mi, Qi Zhu, <u>Hongru WANG</u>+, Rui Wang, Sheng Wang, Erxin Yu, Xuming Hu, Kam-Fai Wong</span> <br>
+                      <span><i>ACL 2025</i></span> + denotes corresponding author
                     </div>
 
 
