--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       </h1>
 
       
-      <p>I am currently a final-year Ph.D. Candidate at The Chinese University of Hong Kong (expected to <strong><span style="color:#bf0140;"> graduate on July 2025 </span></strong>), very honored and fortunate to be supervised by <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a>. Before that, I obtained my Bachelor's degree and Master's degree from the Communication University of China and The Chinese University of Hong Kong in 2019 and 2020, respectively. During my PhD, I am happy and honored to visit The University of Edinburgh (EdinburghNLP) and University of Illinois Urbana-Champaign (BlenderLab), working closely with <a href="https://knowledge-representation.org/j.z.pan/">Prof. Jeff Z. Pan</a>, <a href="https://scholar.google.it/citations?user=9sk6CSgAAAAJ&hl=it">Prof. Pasquale Minervini</a> and <a href="https://scholar.google.com/citations?user=z7GCqT4AAAAJ&hl=en">Prof. Heng Ji</a>. Besides that, I am co-founder and organizer of <a href="https://nice-nlp.github.io/">NLP Academic Exchange Platform (NICE)</a>, which provide a platform to share and discuss recent progress in NLP. &#x1F4DA;&#x1F4DA;&#x1F4DA;</p>
+      <p>I am currently a final-year Ph.D. Candidate at The Chinese University of Hong Kong (expected to <strong><span style="color:#bf0140;"> graduate on July 2025 </span></strong>), very honored and fortunate to be supervised by <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a>. Before that, I obtained my Bachelor's degree and Master's degree from the Communication University of China and The Chinese University of Hong Kong in 2019 and 2020, respectively. During my PhD, I am happy and honored to visit The University of Edinburgh (EdinburghNLP) and University of Illinois Urbana-Champaign (BlenderLab), working closely with <a href="https://knowledge-representation.org/j.z.pan/">Prof. Jeff Z. Pan</a>, <a href="https://scholar.google.it/citations?user=9sk6CSgAAAAJ&hl=it">Prof. Pasquale Minervini</a> and <a href="https://scholar.google.com/citations?user=z7GCqT4AAAAJ&hl=en">Prof. Heng Ji</a>. I also work closely with <a href="https://mwang.princeton.edu/">Prof. Mengdi Wang</a> from Princeton University. Besides that, I am co-founder and organizer of <a href="https://nice-nlp.github.io/">NLP Academic Exchange Platform (NICE)</a>, which provide a platform to share and discuss recent progress in NLP. &#x1F4DA;&#x1F4DA;&#x1F4DA;</p>
 
 
       <!-- <br> -->
@@ -337,10 +337,20 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <a href="https://arxiv.org/abs/2505.20286.pdf">Alita: Generalist Agent Enabling Scalable Agentic Reasoning with Minimal Predefinition and Maximal Self-Evolution</a> 
+          <img src="https://img.shields.io/badge/LLM-orange"> <br>
+          <span class="author_list">Jiahao Qiu, Xuan Qi, Tongcheng Zhang, et al., Shilong Liu, Hongru Wang, Mengdi Wang</span> <br>
+          <span> Arxiv </span>
+          <span><strong style="color:#bf0140">Outperforming OpenAI Deep Research and Manus on GAIA</strong></span>
+        </div>
+
+        <div class="pub-list-item" style="margin-bottom: 1rem">
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <a href="https://arxiv.org/pdf/2504.14870">OTC: Optimal Tool Calls via Reinforcement Learning</a> 
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
           <span class="author_list"><u>Hongru Wang</u>, Cheng Qian, Wanjun Zhong, Xiusi Chen, et al., Mengdi Wang, Kam-Fai Wong, Heng Ji</span> <br>
-          <span> Arxiv (First work to optimize tool-use behaviors of Agent) </span>
+          <span> Arxiv </span>
+          <span><strong style="color:#bf0140">First work to optimize tool-use behaviors of Agent </strong></span>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
