--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
           <span class="author_list">Jiahao Qiu, Xuan Qi, Tongcheng Zhang, et al., Shilong Liu, Hongru Wang, Mengdi Wang</span> <br>
           <span> Arxiv </span>
-          <span><strong style="color:#bf0140">Outperforming OpenAI Deep Research and Manus on GAIA</strong></span>
+          <span style="color:#bf0140">Outperforming OpenAI Deep Research and Manus on GAIA</span>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -350,7 +350,7 @@
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
           <span class="author_list"><u>Hongru Wang</u>, Cheng Qian, Wanjun Zhong, Xiusi Chen, et al., Mengdi Wang, Kam-Fai Wong, Heng Ji</span> <br>
           <span> Arxiv </span>
-          <span><strong style="color:#bf0140">First work to optimize tool-use behaviors of Agent </strong></span>
+          <span style="color:#bf0140">First work to optimize tool-use behaviors of Agent </span>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
