--- a/index.html
+++ b/index.html
@@ -339,9 +339,9 @@
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <a href="https://arxiv.org/abs/2505.20286.pdf">Alita: Generalist Agent Enabling Scalable Agentic Reasoning with Minimal Predefinition and Maximal Self-Evolution</a> 
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
-          <span class="author_list">Jiahao Qiu, Xuan Qi, Tongcheng Zhang, et al., Shilong Liu, Hongru Wang, Mengdi Wang</span> <br>
+          <span class="author_list">Jiahao Qiu, Xuan Qi, Tongcheng Zhang, et al., Shilong Liu, <u>Hongru Wang</u>, Mengdi Wang</span> <br>
           <span> Arxiv </span>
-          <span style="color:#bf0140">Outperforming OpenAI Deep Research and Manus on GAIA</span>
+          <span style="color:#bf0140">(Outperforming OpenAI Deep Research and Manus on GAIA)</span>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -350,7 +350,7 @@
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
           <span class="author_list"><u>Hongru Wang</u>, Cheng Qian, Wanjun Zhong, Xiusi Chen, et al., Mengdi Wang, Kam-Fai Wong, Heng Ji</span> <br>
           <span> Arxiv </span>
-          <span style="color:#bf0140">First work to optimize tool-use behaviors of Agent </span>
+          <span style="color:#bf0140">(First work to optimize tool-use behaviors of Agent)</span>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
