--- a/publication/index.html
+++ b/publication/index.html
@@ -138,7 +138,15 @@
             <div class="row">
                 <div class="col-lg-12">
 
-                     <div class="pub-list-item" style="margin-bottom: 1rem">
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="">UAlign: Leveraging Uncertainty Estimations for Factuality Alignment on Large Language Models</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange"><br>
+                      <span class="author_list">Boyang XUE, Fei Mi, Qi Zhu, <u>Hongru WANG</u><sup>†</sup>, Rui Wang, Sheng Wang, Erxin Yu, Xuming Hu, Kam-Fai Wong</span> <br>
+                      <span><i>ACL 2025</i></span>  <sup>†</sup> denotes corresponding author
+                    </div>
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                       <a href="">Can LLMs Evaluate Complex Attribution in QA? Automatic Benchmarking using Knowledge Graphs</a> 
                       <img src="https://img.shields.io/badge/LLM-orange"><br>
@@ -153,15 +161,6 @@
                       <span class="author_list">Yan Yang, Yixia Li, <u>Hongru WANG</u>, Xuetao Wei, James Jianqiao Yu, Yun Chen, Guanhua Chen</span> <br>
                       <span><i>ACL 2025</i></span>
                     </div>
-
-                    <div class="pub-list-item" style="margin-bottom: 1rem">
-                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                      <a href="">UAlign: Leveraging Uncertainty Estimations for Factuality Alignment on Large Language Models</a> 
-                      <img src="https://img.shields.io/badge/LLM-orange"><br>
-                      <span class="author_list">Boyang XUE, Fei Mi, Qi Zhu, <u>Hongru WANG</u>+, Rui Wang, Sheng Wang, Erxin Yu, Xuming Hu, Kam-Fai Wong</span> <br>
-                      <span><i>ACL 2025</i></span> + denotes corresponding author
-                    </div>
-
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
@@ -232,7 +231,7 @@
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                       <a href="">Steering Knowledge Selection Behaviours in LLMs via SAE-Based Representation Engineering</a> 
                       <img src="https://img.shields.io/badge/LLM-orange"><br>
-                      <span class="author_list">YuZhao, et al., <u>Hongru WANG</u>, Xuanli He, Kam-Fai Wong, Pasquale Minervini</span> <br>
+                      <span class="author_list">Yu Zhao, et al., <u>Hongru WANG</u>, Xuanli He, Kam-Fai Wong, Pasquale Minervini</span> <br>
                       <span><i>NAACL 2025</i></span> (tool conflicts with each other, how to detect and control the behaviors) <br>
                       <span><strong style="color:#bf0140">Oral = 246 / 3185 ~= 7.7% </strong></span>
                     </div>
