--- a/publication/index.html
+++ b/publication/index.html
@@ -143,7 +143,7 @@
                       <a href="">UAlign: Leveraging Uncertainty Estimations for Factuality Alignment on Large Language Models</a> 
                       <img src="https://img.shields.io/badge/LLM-orange"><br>
                       <span class="author_list">Boyang XUE, Fei Mi, Qi Zhu, <u>Hongru WANG</u><sup>†</sup>, Rui Wang, Sheng Wang, Erxin Yu, Xuming Hu, Kam-Fai Wong</span> <br>
-                      <span><i>ACL 2025</i></span>  <sup>†</sup> denotes corresponding author
+                      <span><i>ACL 2025</i></span>  (<sup>†</sup> denotes corresponding author)
                     </div>
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
