--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       
       <h1>About Me 
 
-        <a href="/cv/hongru_cv.pdf" style="font-size: 20px;">CV</a> 
+        <a href="/cv/cv_eng.pdf" style="font-size: 20px;">CV</a> 
         <a href="/cv/RS_One.pdf" style="font-size: 20px;">Research Statement</a>
         <a href="/cv/TS.pdf" style="font-size: 20px;">Teaching Statement</a>
       </h1>
@@ -410,6 +410,14 @@
           </div>
         </div>
       -->
+        <div class="pub-list-item" style="margin-bottom: 1rem">
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <a href="">UAlign: Leveraging Uncertainty Estimations for Factuality Alignment on Large Language Models</a> 
+          <img src="https://img.shields.io/badge/LLM-orange"><br>
+          <span class="author_list">Boyang XUE, Fei Mi, Qi Zhu, <u>Hongru WANG</u><sup>†</sup>, Rui Wang, Sheng Wang, Erxin Yu, Xuming Hu, Kam-Fai Wong</span> <br>
+          <span><i>ACL 2025</i></span> (<sup>†</sup> denotes corresponding author)
+        </div>
+
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <a href="https://arxiv.org/pdf/2505.14116">Self-Reasoning Language Models: Unfold Hidden Reasoning Chains with Few Reasoning Catalyst</a> 
