--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2505.20286.pdf">Alita: Generalist Agent Enabling Scalable Agentic Reasoning with Minimal Predefinition and Maximal Self-Evolution</a> 
+          <a href="https://arxiv.org/abs/2505.20286.pdf">Alita: Generalist Agent ... with Minimal Predefinition and Maximal Self-Evolution</a> 
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
           <span class="author_list">Jiahao Qiu, Xuan Qi, Tongcheng Zhang, et al., Shilong Liu, <u>Hongru Wang</u>, Mengdi Wang</span> <br>
           <span> Arxiv </span>
@@ -414,7 +414,7 @@
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <a href="">UAlign: Leveraging Uncertainty Estimations for Factuality Alignment on Large Language Models</a> 
           <img src="https://img.shields.io/badge/LLM-orange"><br>
-          <span class="author_list">Boyang XUE, Fei Mi, Qi Zhu, <u>Hongru WANG</u><sup>†</sup>, Rui Wang, Sheng Wang, Erxin Yu, Xuming Hu, Kam-Fai Wong</span> <br>
+          <span class="author_list">Boyang XUE, Fei Mi, Qi Zhu, <u>Hongru WANG</u><sup>†</sup>, Rui Wang, et al., Kam-Fai Wong</span> <br>
           <span><i>ACL 2025</i></span> (<sup>†</sup> denotes corresponding author)
         </div>
 
