--- a/talk/index.html
+++ b/talk/index.html
@@ -131,19 +131,13 @@
             <div class="row">
                 <div class="col-lg-12">
 
-                    <ul>
-                        <li>Empowering Large Language Models: Tool Learning for Real-World Interaction</li>
+                    <ul>Theory of Agent: From Definition, to Behavior and Objective</li>
                         <ul>
-                            <li>TechBeat, Oct 2024 (Apple Intelligence, o1-like reasoning)</li>
+                            <li>SUSTeach, Jun 2025</li> <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/talk/ppts/theory_of_agent.pdf" target="_blank" rel="noopener"> Slides </a>
+                            <li>HKU NLP Seminar, Jun 2025</li>
                         </ul>
                     </ul>
 
-                    <ul>
-                        <li>AppBench: Planningof MultipleAPIsfromVarious APPs forComplexUser Instruction</li>
-                        <ul>
-                            <li>AI Time, Oct 2024 (Apple Intelligence)</li>
-                        </ul>
-                    </ul>
                 
                 </div>
             </div>
@@ -162,6 +156,17 @@
                 <div class="col-lg-12">
 
                     <ul>
+                        <li>Empowering Large Language Models: Tool Learning for Real-World Interaction</li>
+                        <ul>
+                            <li>TechBeat, Oct 2024 (Apple Intelligence, o1-like reasoning)</li>
+                        </ul>
+
+                        <li>AppBench: Planningof MultipleAPIsfromVarious APPs forComplexUser Instruction</li>
+                        <ul>
+                            <li>AI Time, Oct 2024 (Apple Intelligence)</li>
+                        </ul>
+
+
                         <li>Integrating Internal Reasoning and External Acting for Personalized Dialogue Agent</li>
                         <ul>
                             <li>EdinburghNLP, Aug 2024</li>
