--- a/talk/index.html
+++ b/talk/index.html
@@ -131,9 +131,10 @@
             <div class="row">
                 <div class="col-lg-12">
 
-                    <ul>Theory of Agent: From Definition, to Behavior and Objective</li>
+                    <ul>
+                        <li> Theory of Agent: From Definition, to Behavior and Objective</li>
                         <ul>
-                            <li>SUSTeach, Jun 2025</li> <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/talk/ppts/theory_of_agent.pdf" target="_blank" rel="noopener"> Slides </a>
+                            <li>SUSTeach, Jun 2025 <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/talk/ppts/theory_of_agent.pdf" target="_blank" rel="noopener"> Slides </a> </li>
                             <li>HKU NLP Seminar, Jun 2025</li>
                         </ul>
                     </ul>
